--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -37,6 +37,7 @@ collections:
      preview: false
     fields:
       - { label: "Title", name: "title", widget: "string" }
+      - { label: "Date", name: "date", widget: "date", default: "{{year}}-{{month}}-{{day}}", format: 'YYYY-MM-DD'}
       - { label: "Category", name: "category", widget: "select", multiple: true, options: ["Performance", "Design", "Theatre Making"], default: ["Performance"] }
       - { label: "Text", name: "text", widget: "markdown" }
       - { label: "Main Picture", name: "main_picture", widget: "image", allow_multiple: false }
