--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "dependencies": {
     "gatsby": "^2.17.6",
     "gatsby-plugin-netlify-cms": "^4.1.26",
+    "global": "^4.4.0",
+    "netlify-cli": "^2.20.2",
     "netlify-cms-app": "^2.9.7",
     "react": "^16.11.0",
     "react-dom": "^16.11.0"
