--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -37,8 +37,13 @@ collections:
      preview: false
     fields:
       - { label: "Title", name: "title", widget: "string" }
-      - { label: "Date", name: "date", widget: "date", default: "{{year}}-{{month}}-{{day}}", format: 'YYYY-MM-DD'}
+      - { label: "Date", name: "date", widget: "date", default: {{year}}-{{month}}-{{day}}, format: 'YYYY-MM-DD'}
       - { label: "Category", name: "category", widget: "select", multiple: true, options: ["Performance", "Design", "Theatre Making"], default: ["Performance"] }
       - { label: "Text", name: "text", widget: "markdown" }
       - { label: "Main Picture", name: "main_picture", widget: "image", allow_multiple: false }
-      - { label: "Gallery", name: "gallery", widget: "image", allow_multiple: true}
+      - label: "Gallery" 
+        name: "gallery"
+        widget: "image"
+        media_library:
+          config:
+            multiple: true
