fix: cloudinary media library

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -55,5 +55,6 @@ collections:
         name: "gallery"
         widget: "image"
         media_library:
+          name: cloudinary
           config:
             multiple: true
