--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -55,6 +55,4 @@ collections:
         name: "gallery"
         widget: "image"
         media_library:
-          name: cloudinary
-          config:
-            multiple: true
+          name: "cloudinary"
