--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -51,8 +51,8 @@ collections:
       - { label: "Category", name: "category", widget: "select", multiple: true, options: ["Performance", "Design", "Theatre Making"], default: ["Performance"] }
       - { label: "Text", name: "text", widget: "markdown" }
       - { label: "Main Picture", name: "main_picture", widget: "image", allow_multiple: false }
-      # - label: "Gallery" 
-      #   name: "gallery"
-      #   widget: "image"
-      #   media_library:
-      #     name: "cloudinary"
+      - label: "Gallery" 
+        name: "gallery"
+        widget: "image"
+        media_library:
+          name: "cloudinary"
