--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-helmet": "^5.2.1",
-    "react-icons": "^3.8.0"
+    "react-icons": "^3.8.0",
+    "react-router-dom": "^5.1.2"
   },
   "devDependencies": {
     "prettier": "^1.18.2"
