--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gatsby-plugin-react-helmet": "^3.1.13",
     "gatsby-plugin-sass": "^2.1.21",
     "gatsby-plugin-sharp": "^2.2.34",
+    "gatsby-plugin-smoothscroll": "^1.0.3",
     "gatsby-remark-normalize-paths": "^1.0.0",
     "gatsby-source-filesystem": "^2.1.35",
     "gatsby-transformer-remark": "^2.6.32",
