--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-dom": "^16.11.0",
     "react-helmet": "^5.2.1",
     "react-icons": "^3.8.0",
-    "react-router-dom": "^5.1.2"
+    "react-router-dom": "^5.1.2",
+    "smooth-scroll": "^16.1.0"
   },
   "devDependencies": {
     "prettier": "^1.18.2"
