--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@reach/dialog": "^0.6.2",
     "classnames": "^2.2.6",
     "dart-sass": "^1.23.3",
     "gatsby": "^2.17.6",
