--- a/package.json
+++ b/package.json
@@ -9,19 +9,20 @@
     "classnames": "^2.2.6",
     "dart-sass": "^1.23.3",
     "gatsby": "^2.17.6",
-    "gatsby-image": "^2.2.30",
+    "gatsby-image": "^2.2.33",
     "gatsby-plugin-manifest": "^2.2.25",
     "gatsby-plugin-offline": "^3.0.17",
     "gatsby-plugin-react-css-modules-scss-support": "^0.1.0",
     "gatsby-plugin-react-helmet": "^3.1.13",
     "gatsby-plugin-sass": "^2.1.21",
-    "gatsby-plugin-sharp": "^2.2.34",
+    "gatsby-plugin-sharp": "^2.3.2",
     "gatsby-plugin-smoothscroll": "^1.0.3",
     "gatsby-remark-normalize-paths": "^1.0.0",
     "gatsby-source-filesystem": "^2.1.35",
     "gatsby-transformer-remark": "^2.6.32",
-    "gatsby-transformer-sharp": "^2.3.1",
+    "gatsby-transformer-sharp": "^2.3.5",
     "markdown-to-jsx": "^6.10.3",
+    "modali": "^1.2.0",
     "node-sass": "^4.13.0",
     "prop-types": "^15.7.2",
     "react": "^16.11.0",
@@ -29,6 +30,7 @@
     "react-helmet": "^5.2.1",
     "react-icons": "^3.8.0",
     "react-images": "^1.0.0",
+    "react-lightbox-component": "^1.2.1",
     "react-router-dom": "^5.1.2",
     "smooth-scroll": "^16.1.0"
   },
