--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-icons": "^3.8.0",
     "react-images": "^1.0.0",
     "react-lightbox-component": "^1.2.1",
+    "react-player": "^1.14.2",
     "react-router-dom": "^5.1.2",
     "smooth-scroll": "^16.1.0"
   },
