--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@forestryio/gatsby-remark-normalize-paths": "^1.0.0",
     "@reach/dialog": "^0.6.2",
     "classnames": "^2.2.6",
     "gatsby": "^2.17.6",
@@ -15,7 +16,6 @@
     "gatsby-plugin-sass": "^2.1.26",
     "gatsby-plugin-sharp": "^2.3.2",
     "gatsby-plugin-smoothscroll": "^1.0.3",
-    "gatsby-remark-normalize-paths": "^1.0.0",
     "gatsby-source-filesystem": "^2.1.35",
     "gatsby-transformer-remark": "^2.6.32",
     "gatsby-transformer-sharp": "^2.3.5",
