--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "smooth-scroll": "^16.1.0"
   },
   "devDependencies": {
+    "cli": "^1.0.1",
+    "netlify": "^3.1.0",
     "netlify-cli": "^2.40.0",
     "prettier": "^1.18.2"
   },
