--- a/package.json
+++ b/package.json
@@ -6,37 +6,38 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "@forestryio/gatsby-remark-normalize-paths": "^1.0.0",
-    "@reach/dialog": "^0.6.2",
-    "classnames": "^2.2.6",
-    "gatsby": "^2.17.6",
-    "gatsby-image": "^2.2.33",
-    "gatsby-plugin-manifest": "^2.2.25",
-    "gatsby-plugin-offline": "^3.0.17",
-    "gatsby-plugin-react-helmet": "^3.1.13",
-    "gatsby-plugin-sass": "^2.1.26",
-    "gatsby-plugin-sharp": "^2.3.2",
-    "gatsby-plugin-smoothscroll": "^1.0.3",
-    "gatsby-source-filesystem": "^2.1.35",
-    "gatsby-transformer-remark": "^2.6.32",
-    "gatsby-transformer-sharp": "^2.3.5",
-    "markdown-to-jsx": "^6.10.3",
+    "@reach/dialog": "^0.15.0",
+    "classnames": "^2.3.1",
+    "gatsby": "^3.3.0",
+    "gatsby-image": "^3.3.0",
+    "gatsby-plugin-manifest": "^3.3.0",
+    "gatsby-plugin-offline": "^4.3.0",
+    "gatsby-plugin-react-helmet": "^4.3.0",
+    "gatsby-plugin-sass": "^4.3.0",
+    "gatsby-plugin-sharp": "^3.3.0",
+    "gatsby-plugin-smoothscroll": "^1.2.0",
+    "gatsby-source-filesystem": "^3.3.0",
+    "gatsby-transformer-remark": "^4.0.0",
+    "gatsby-transformer-sharp": "^3.3.0",
+    "markdown-to-jsx": "^7.1.2",
     "modali": "^1.2.0",
-    "node-sass": "^4.13.0",
+    "ncu": "^0.2.1",
+    "node-sass": "^5.0.0",
     "prop-types": "^15.7.2",
-    "react": "^16.11.0",
+    "react": "^17.0.2",
     "react-anchor-link-smooth-scroll": "^1.0.12",
-    "react-dom": "^16.11.0",
-    "react-helmet": "^5.2.1",
-    "react-icons": "^3.8.0",
-    "react-images": "^1.0.0",
+    "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
+    "react-icons": "^4.2.0",
+    "react-images": "^1.1.7",
     "react-lightbox-component": "^1.2.1",
-    "react-player": "^1.14.2",
-    "react-router-dom": "^5.1.2",
-    "smooth-scroll": "^16.1.0"
+    "react-player": "^2.9.0",
+    "react-router-dom": "^5.2.0",
+    "smooth-scroll": "^16.1.3"
   },
   "devDependencies": {
-    "netlify-cli": "^2.40.0",
-    "prettier": "^1.18.2"
+    "netlify-cli": "^3.17.2",
+    "prettier": "^2.2.1"
   },
   "keywords": [
     "gatsby"
